--- a/src/Components/TodoListe.css
+++ b/src/Components/TodoListe.css
@@ -4,14 +4,18 @@ margin: 0;
 padding: 0;
 
 } 
+body{
+  background-color: darkgoldenrod;
+}
 
 .container {
-
+background: linear-gradient(to right bottom,#e1b382 #c89666);
 width: 100%;
-min-height: 180vh;
+min-height: 100vh;
 display: flex;
 justify-content: center;
 align-items: center;
+
 
 }
 .app-wrapper{
@@ -20,9 +24,9 @@ min-width: 458px;
 min-height: 650px;
 padding: 30px;
 box-sizing: border-box;
-border-radius: 10px;
-box-shadow: 1px 1px 10px burlywood;
-margin-bottom: 600px;
+border-radius: 9px;
+box-shadow: 2px 2px 10px #000;
+margin-bottom: 0px;
 }
 .header h1{
   color: #fff;
@@ -51,7 +55,7 @@ margin-bottom: 600px;
   
 
 }
-.todo-list{
+.list-item{
 display: flex;
 margin: 20px 0;
 border: 1px solid #ccc;
@@ -79,12 +83,20 @@ max-height: 30px
   margin-right: 10px;
 }
 .button-delete{
-  color: red;
+  color:aqua;
+ 
 }
 .button-complete{
-  text-decoration-style: solid;
-  text-decoration-color: #ff6c6c;
-  opacity: 0,6;
+  color: #ff6c6c;
+  margin-right: 10px;
+
+}
+.complete{
+text-decoration-style:double;
+text-decoration-line: line-through;
+text-decoration-color:red;
+opacity: 0.6;
+  
 }
 .list{
 width: 220px;
@@ -92,7 +104,7 @@ background-color: #12343b;
 border: none;
 color: #ccc;
 font-size: 20px;
-padding-left: 20px;
+padding-left: 10px;
 margin-right: 15px;
 
 }
